# Homework

./: README.md  main.py  mylog.txt  pyproject.toml
csv_excel/: data_loaders.py
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_32d203df8c57c9df___init___py.html  z_32d203df8c57c9df_processing_py.html  z_592994cbaf84a659___init___py.html  z_592994cbaf84a659_generators_py.html  z_5d976784e3f20e51___init___py.html  z_5d976784e3f20e51_mask_account_card_py.html  z_9520dc5c901e4918___init___py.html  z_9520dc5c901e4918_decorators_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_tets_processing_py.html
src/: masks.py
src/api/: external_api.py  utils.py
src/csv_excel/: data_loaders.py
src/decorator/: decorators.py
src/filterings/: filtering.py  transaction_processing.py
src/generator/: __init__.py  generators.py
src/processing/: processing.py
src/widget/: mask_account_card.py
tests/: test_data_loaders.py  test_decorators.py  test_external_api.py  test_filtering.py  test_generators.py  test_masks.py  test_utils.py  tets_processing.py
