[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Виктор <viktor.dubov.2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"

[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Конфигурация для black
[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Конфигурация для isort
[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__"]

# Конфигурация для mypy
[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
warn_return_any = true
exclude = '(venv|\.venv|dist|build|\.git|__pycache__)'
ignore_missing_imports = true
strict_optional = true